--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "homepage" : "http://myname.github.io/myapp"
+    "homepage" : "http://myname.github.io/myapp",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
