--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "scoreboard",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://myname.github.io/myapp",
+  "homepage": "https://melanieoc.github.io/routes/",
   "dependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
